[package]
name = "respan"
version = "0.1.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
description = "Macros to erase scope information from tokens"
documentation = "https://docs.rs/respan"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/respan"
rust-version = "1.68"

[lib]
proc-macro = true

[workspace]
members = ["unsaef"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
