[package]
name = "unsaef"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
description = "Macros to erase scope information from tokens"
documentation = "https://docs.rs/unsaef"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/respan"
rust-version = "1.56"

[lib]
proc-macro = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
